--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js",
     "prod": "node index.js",
-    "lint":"eslint ."
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.49.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
@@ -22,5 +23,9 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2"
-  }
+  },
+    "jest": {
+      "testEnvironment": "node"
+    }
+  
 }
