--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "eslint": "^8.49.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -24,8 +25,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2"
   },
-    "jest": {
-      "testEnvironment": "node"
-    }
-  
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
+  }
 }
