--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.3",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "jest": {
     "testEnvironment": "node",
